# leek-core

./: .gitignore  MANIFEST.in  README.md  __init__.py  generate_proto.py  pyproject.toml  requirements.txt  setup.py
agent_skills/: README.md
agent_skills/leek-backtest/: SKILL.md
agent_skills/leek-data-source/: SKILL.md
agent_skills/leek-executor/: SKILL.md
agent_skills/leek-factors/: SKILL.md
agent_skills/leek-indicators/: SKILL.md
agent_skills/leek-ml-training/: SKILL.md
agent_skills/leek-risk-position/: SKILL.md
agent_skills/leek-strategy/: SKILL.md
agent_skills/leek-strategy-evaluation/: SKILL.md
analysis/: __init__.py
backtest/: __init__.py
base/: __init__.py  component.py  context.py  plugin.py  util.py
data/: __init__.py  base.py  clickhouse_source.py  common.py  context.py  okx_source.py  websocket.py
data_processor/: __init__.py  base.py  kline_fill_processor.py
docs/: 00-overview.md  01-strategy.md  02-sub-strategy.md  03-position.md  04-risk.md  06-factor.md  10-models.md  11-data-sources.md  12-indicators.md  20-engine.md  21-logging.md  22-event-bus.md  23-executor.md  30-backtest.md  40-alarm.md  41-ml.md  42-grpc.md  90-architecture.md  91-component-guide.md  92-testing.md  99-changelog.md
engine/: __init__.py  base.py  core.py  data_manager.py  executor_manager.py  position_manager.py  risk_manager.py  simple.py  strategy_manager.py
event/: __init__.py  bus.py  types.py
executor/: __init__.py  backtest.py  base.py  context.py  okx.py
indicators/: __init__.py  dk.py  dsp.py  ichimoku_cloud.py  kdj.py  macd.py  rsrs.py  sar.py
indicators/chan/: bsp.py  fx.py
info_fabricator/: __init__.py  base.py  context.py  filter.py  init.py  kline_fill.py  throttle.py
manager/: __init__.py  base.py  data.py  executor.py  position.py  strategy.py
models/: __init__.py  component.py  config.py  constants.py  data.py  events.py  order.py  parameter.py  position.py  signal.py
policy/: __init__.py  position.py  position_stop_loss.py  position_take_profit.py  strategy.py
position/: __init__.py  base.py  context.py
risk/: __init__.py  base.py  context.py
src/leek_core/: __init__.py
src/leek_core/adapts/: __init__.py  binance_adapter.py  gate_adapter.py  okx_adapter.py
src/leek_core/alarm/: __init__.py  base.py  context.py  dingding.py  feishu.py
src/leek_core/analysis/: __init__.py  performance.py
src/leek_core/backtest/: __init__.py  backtest.py  data_cache.py  factor_evaluation.py  performance.py  runner.py  statistical_tests.py  types.py
src/leek_core/base/: __init__.py  component.py  context.py  plugin.py  util.py
src/leek_core/data/: __init__.py  base.py  binance_source.py  clickhouse_source.py  context.py  data.py  gate_source.py  okx_source.py  redis_clickhouse_source.py  websocket.py
src/leek_core/engine/: __init__.py  backtest.py  base.py  engine.py  grpc_engine.py  indicator_view.py  process.py  simple.py  stategy_debug.py
src/leek_core/engine/backtest/: backtest.py  performance.py  runner.py
src/leek_core/engine/grpc/: engine.proto  engine_pb2.py  engine_pb2_grpc.py  grpc_server.py
src/leek_core/event/: __init__.py  bus.py  single_bus.py  types.py
src/leek_core/executor/: __init__.py  backtest.py  base.py  binance.py  context.py  gate.py  okx.py
src/leek_core/indicators/: __init__.py  atr.py  bbi.py  bias.py  boll.py  cci.py  chaikin_volatility.py  common.py  correlation_dimension.py  de_mark.py  dk.py  dm.py  donchian.py  dsp.py  elder_impulse.py  extreme.py  gann_hilo.py  hurst.py  ichimoku_cloud.py  kdj.py  keltner.py  lyapunov.py  ma.py  macd.py  r_squared.py  rsi.py  rsrs.py  sar.py  spike_detector.py  supertrend.py  t.py  volume_profile.py  wr.py  zscore.py
src/leek_core/indicators/chan/: bi.py  bsp.py  chan.py  comm.py  dr.py  enums.py  fx.py  k.py  seg.py  zs.py
src/leek_core/indicators/czsc/: __init__.py  base.py  bi.py  czsc.py  d.py  k.py  zs.py
src/leek_core/info_fabricator/: __init__.py  base.py  context.py  init.py  kline_fill.py  throttle.py
src/leek_core/manager/: __init__.py  base.py  data.py  executor.py  position.py  risk.py  strategy.py
src/leek_core/ml/: __init__.py  evaluator.py  feature_engine.py  training_builder.py  training_engine.py
src/leek_core/ml/factors/: __init__.py  alpha101.py  alpha158.py  alpha191.py  alpha360.py  ar_price_diff.py  base.py  direction.py  dmom.py  evaluation.py  momentum.py  price_spike.py  technical.py  time.py  volume.py
src/leek_core/ml/label/: __init__.py  base.py  direction.py  event.py  future_return.py  multi_label.py  rank.py  reversal.py  risk_adjusted.py  triple_barrier.py
src/leek_core/models/: __init__.py  config.py  constants.py  ctx.py  data.py  order.py  parameter.py  position.py  risk_event.py  signal.py  transaction.py
src/leek_core/policy/: __init__.py  context.py  position.py  position_stop_loss.py  position_take_profit.py  position_target_trailing_exit.py  strategy.py  strategy_profit_control.py  strategy_signal_limit.py  strategy_time_window.py
src/leek_core/position/: __init__.py  capital_account.py  context.py  portfolio.py  position_tracker.py  risk.py
src/leek_core/risk/: __init__.py  base.py  context.py
src/leek_core/strategy/: __init__.py  base.py  context.py  cta.py  gru_strategy.py  ml.py  strategy_debug.py  strategy_dmi.py  strategy_mode.py  xgboost_strategy.py
src/leek_core/sub_strategy/: __init__.py  base.py  position.py  position_stop_loss.py  position_take_profit.py  position_target_trailing_exit.py
src/leek_core/utils/: __init__.py  alarm.py  datetime_utils.py  decimal_utils.py  decorator.py  func.py  id_generator.py  serialization.py
strategy/: __init__.py  base.py  context.py  cta.py  sidecar.py  strategy_mode.py
sub_strategy/: __init__.py  base.py
tests/data/: test_clickhouse_source.py  test_kline_fill_processor.py  test_okx_source.py
tests/engine/: test_engine.py
tests/models/: test_data.py
tests/utils/: test_color_logging.py  test_logging.py
utils/: __init__.py  decimal_utils.py  decorator.py  event_bus.py
utils/logging/: __init__.py  decorators.py  formatters.py
(+51 files in other folders)
