[build-system]
requires = ["setuptools>=64", "wheel"]  # 推荐较新 setuptools 支持现代特性
build-backend = "setuptools.build_meta"

[project]
name = "leek-core"
version = "0.1.0"
description = "Leek Core 量化交易引擎/组件化事件驱动框架"
authors = ["shenglin.li <764935704@qq.com>"]
readme = "README.md"
homepage = "https://github.com/shenglin-li/leek-core"
repository = "https://github.com/shenglin-li/leek-core"
documentation = "https://github.com/shenglin-li/leek-core"
keywords = [
    "quantitative trading",
    "algorithmic trading",
    "finance",
    "investment",
    "event-driven",
    "component",
    "okx",
    "backtest"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "*"
clickhouse-driver = "*"
numpy = "*"
pandas = "*"
python_okx = "*"
requests = "*"
rich = "*"
scipy = "*"
setuptools = "*"
websocket-client = "*"
websockets = "*"
zope-interface = ">=5"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.group.backtest.dependencies]
vectorbt = "^0.24.0"
pyfolio = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3