[project]
name = "leek-core"
version = "1.0.4"
description = "Leek Core 量化交易引擎/组件化事件驱动框架"
authors = [
    {name = "shenglin.li", email = "764935704@qq.com"}
]
readme = "README.md"
homepage = "https://github.com/shenglin-li/leek-core"
repository = "https://github.com/shenglin-li/leek-core"
documentation = "https://github.com/shenglin-li/leek-core"
keywords = [
    "quantitative trading",
    "algorithmic trading",
    "finance",
    "investment",
    "event-driven",
    "component",
    "okx",
    "backtest"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cachetools = "*"
clickhouse-driver = "*"
numpy = "*"
pandas = "*"
psutil = ">=5.9.0"
python_okx = "*"
requests = "*"
rich = "*"
scipy = "*"
setuptools = "*"
tomli = "^2.0.1"
websocket-client = "*"
websockets = "*"
zope-interface = ">=5"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
pytest = "^7.0"
pytest-cov = "^4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.group.backtest.dependencies]
# vectorbt = "^0.24.0"
# pyfolio = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.douban.com/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"
