[tool.poetry]
name = "leek-core"
version = "1.7.2"
description = "Leek Core 量化交易引擎/组件化事件驱动框架"
authors = ["shenglin.li <764935704@qq.com>"]
readme = "README.md"
homepage = "https://github.com/shenglin-li/leek-core"
repository = "https://github.com/shenglin-li/leek-core"
documentation = "https://github.com/shenglin-li/leek-core"
keywords = [
    "quantitative trading",
    "algorithmic trading",
    "finance",
    "investment",
    "event-driven",
    "component",
    "okx",
    "backtest"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

# Use src/ layout
packages = [
    { include = "leek_core", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cachetools = "5.3.3"
clickhouse-driver = "0.2.9"
numpy = "1.26.4"
pandas = "2.2.2"
psutil = "~=5.9.0"
python_okx = "0.3.9"
requests = "2.32.2"
rich = "13.3.5"
scipy = "1.13.1"
setuptools = "69.5.1"
tomli = "~=2.0.1"
websocket-client = "1.8.0"
websockets = "15.0.1"
zope-interface = "~=5"
plotly = "~=6.2.0"
diskcache = "~=5.6.3"
concurrent_log_handler = "~=0.9.28"

[tool.poetry.group.dev.dependencies]
black = "~=24.4.2"
isort = "~=5.13.2"
flake8 = "~=7.0.0"
mypy = "~=1.10.0"
pytest = "~=7.4.4" 
pytest-cov = "~=4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "~=7.3.7"
sphinx-rtd-theme = "~=1.0.0"

[tool.poetry.group.backtest.dependencies]
# vectorbt = "~=0.24.0"
# pyfolio = "~=0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "supplemental"

# [[tool.poetry.source]]
# name = "douban"
# url = "https://pypi.douban.com/simple/"
# priority = "supplemental"

[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"
